# f1-analytics-hub

./: README.md
.github/workflows/: build-f1hubui.yml  test-f1hubservice.yml
f1hubservice/: README.md  pyproject.toml
f1hubservice/app/: main.py
f1hubservice/app/api/: info.py  routes_processing.py
f1hubservice/app/core/: config.py  logger.py
f1hubservice/app/models/: schemas.py
f1hubservice/app/services/: data_processor.py  info_processor.py
f1hubservice/tests/: test_processing.py  test_schedule.py
f1hubui/: index.html  package-lock.json  package.json
f1hubui/src/: App.tsx  index.css
f1hubui/src/api/: f1Service.ts
f1hubui/src/components/: MathAdd.tsx  ScheduleViewer.tsx
notebooks/: fastf1.ipynb
